--- a/charts/example-v2/values.yaml
+++ b/charts/example-v2/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: nginx
-  tag: stable
+  repository: eeshan7/ozone-argo
+  tag: latest
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
